<resources>
    <string name="app_name">亲情一系</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">设置</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">登录</string>

    <!-- Strings related to login -->
    <string name="prompt_username">请输入用户名（手机号）</string>
    <string name="prompt_password">请输入密码</string>
    <string name="prompt_password_again">请再次输入密码</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">登录</string>
    <string name="action_logining">登录中...</string>
    <string name="action_registing">注册中...</string>
    <string name="action_register_short">注册</string>
    <string name="error_invalid_email">用户名不合法，请确认后重试</string>
    <string name="error_invalid_password">密码过短，请确认后重试</string>
    <string name="error_diff_password">两次密码输入不一致，请确认后重试</string>
    <string name="error_incorrect_password">密码错误，请重试</string>
    <string name="error_field_required">该处为必填</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="share">分享</string>
    <string name="bindparent">关联老人</string>
    <string name="logout">切换账户</string>
    <string name="finishapp">退出应用</string>
    <string name="changedate">更改日期</string>
    <string name="tip_logout">确定退出当前账号吗？</string>
    <string name="action_touchtologin">点击头像登录</string>

    <string name="title_activity_regist">注册</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="rb_main_schedule">日程</string>
    <string name="rb_main_gallery">相册</string>
    <string name="rb_main_message">留言</string>
    <string name="rb_main_location">定位</string>


    <string name="album">相册</string>
    <string name="photo">照片</string>

    <string name="title_activity_main2">Main2Activity</string>
<<<<<<< HEAD
=======

>>>>>>> eb3b1146fb5dd97dd990c5956be3a56653cf529b
    <string name="action_register_successful">注册成功</string>
    <string name="action_logining_successful">登录成功</string>
    <string name="action_logining_fail">登录失败:用户或者密码错误</string>
    <string name="et_search_content_hint">请输入老人姓名</string>
    <string name="action_searching">正在查找...</string>
    <string name="confirm">是否确认选择该老人</string>
    <string name="action_feedback">反馈</string>
    <string name="et_hint_message">请填写您的留言</string>


</resources>
