<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_switchtoother"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/switchtoother" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/logout" />
        <item
            android:id="@+id/nav_finishapp"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/finishapp" />
        <item
            android:id="@+id/nav_set"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/action_settings" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />

        </menu>
    </item>

</menu>
