<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="60dp"
    android:orientation="vertical"
    tools:context="com.bupt.affection.MainActivity">

    <fragment
        android:id="@+id/fg_main_schedule"
        android:name="com.bupt.affection.fragment.ScheduleFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:layout="@layout/fragment_schedule" />

    <fragment
        android:id="@+id/fg_main_gallery"
        android:name="com.bupt.affection.fragment.GalleryFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/fg_main_message"
        android:name="com.bupt.affection.fragment.MessageFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:layout="@layout/fragment_message" />

    <fragment
        android:id="@+id/fg_main_location"
        android:name="com.bupt.affection.fragment.LocationFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:layout="@layout/fragment_location" />

    <RadioGroup
        android:id="@+id/rg_main_tab"
        style="@style/rg_main_tab">

        <RadioButton
            android:id="@+id/rb_main_schedule"
            style="@style/rb_main_tab"
            android:checked="true"
            android:text="@string/rb_main_schedule" />

        <RadioButton
            android:id="@+id/rb_main_gallery"
            style="@style/rb_main_tab"
            android:text="@string/rb_main_gallery" />

        <RadioButton
            android:id="@+id/rb_main_message"
            style="@style/rb_main_tab"
            android:text="@string/rb_main_message" />

        <RadioButton
            android:id="@+id/rb_main_location"
            style="@style/rb_main_tab"
            android:text="@string/rb_main_location" />

    </RadioGroup>
</LinearLayout>
